--- a/verte.css
+++ b/verte.css
@@ -14,6 +14,11 @@ line-height:1.3;
 font-family:'Cabin',sans-serif!important
 }
 
+.imgbt22
+{
+  vertical-align: middle !important;width: 24px !important;height: 24px !important;color: white;margin-top: 7px !important;
+}
+
 span,div,p {
 white-space:normal!important
 }
