--- a/verte.css
+++ b/verte.css
@@ -19,8 +19,8 @@ font-family:'Cabin',sans-serif!important
   vertical-align: middle !important;
   width: 24px !important;
   height: 24px !important;
-   background: url(menu.png);
-  color: white;margin-top: 7px !important;
+  color: white;
+  margin-top: 7px !important;
 }
 
 span,div,p {
@@ -252,9 +252,7 @@ border:none!important
 .imgbt {
 
     width: 32px;
-    background: url(menu.png);
     margin-top: 4px;
-    background-size: 32px;
     height: 32px;
 }
 
